Fixed the white space in the sound wave icon.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,5 +8,5 @@ html {
 }
 
 header .icon {
-  max-height: 230px;
+  max-height: 100px;
 }
